# toyc-Lexer

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
src/: Lexer.cpp  Lexer.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
tests/: case0.c  sample.c
tests/functional/: f01_minimal.c  f02_assignment.c  f03_if_else.c  f04_while_break.c  f05_function_call.c  f06_continue.c  f07_scope_shadow.c  f08_short_circuit.c  f09_recursion.c  f10_void_fn.c  f11_precedence.c  f12_division_check.c  f12_division_check.out  f13_scope_block.c  f13_scope_block.out  f14_nested_if_while.c  f14_nested_if_while.out  f15_multiple_return_paths.c  f15_multiple_return_paths.out  f16_complex_syntax.c  f16_complex_syntax.out  f17_complex_expressions.c  f17_complex_expressions.out  f18_many_variables.c  f18_many_variables.out  f19_many_arguments.c  f19_many_arguments.out  f20_comprehensive.c
